@@ -1,3 +1,7 @@
+2003-12-21  Danilo Šegan  <dsegan@gmx.net>
+
+	* POTFILES.in: Synced with recent name changes.
+
 2003-12-20  Arafat Medini <lumina@silverpen.de>
                                                                                 
         * ar.po: Updated Arabic translation
